--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -2,7 +2,7 @@ p {
   margin: 0;
 }
 
-h3 {
+h4 {
   padding-left: 20px;
 }
 .banner {
@@ -16,17 +16,26 @@ h3 {
 }
 
 .header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   background-color: lightgrey;
   height: 25px;
   border-bottom: solid black;
   border-top: solid black;
+  padding-right: 10px;
 }
 
-#box{
-  display: flex;
-  justify-content: flex-end;
-  font-weight: bold;
-  padding-right: 5px;
+.btn-close {
+  background-color: transparent;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+#closeBtn:focus {
+  outline: none;
+  box-shadow: none; /* Also removes the potential box-shadow on Bootstrap buttons */
 }
 
 .user-info {
@@ -40,4 +49,5 @@ h3 {
 .user-info img {
   width: 110px;
   height: 120px;
+  border: 2px solid black;
 }
