--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,14 @@
 @import url('https://use.fontawesome.com/releases/v6.1.2/css/all.css');
 
 @import url("components/banner.css");
+@import url("components/folder.css");
+@import url("components/popup.css");
+@import url("components/pop-jpegs.css");
 
 /* Utilities */
 body {
   margin: 0;
-  font-family: Open Sans;
-  background-image:url("../images/gods_remix3.gif");
+  font-family: 'Tahoma', sans-serif;
   background-size: cover;
   height: 100vh;
   padding:0;
@@ -29,4 +31,26 @@ a {
   margin-top: 100px;
   display: flex;
   justify-content: center;
+}
+
+.banner {
+  z-index: 10;
+}
+
+.banner-pop, .banner-jpegs {
+  z-index: 20;
+}
+
+#projects-folder {
+  z-index: 5;
+}
+
+#backgroundFrame {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border: none;
 }
