a lot of new tings

--- a/css/components/pop-jpegs.css
+++ b/css/components/pop-jpegs.css
@@ -67,3 +67,7 @@
 #remilia-folder img, #bera-folder img, #radcattin img, #anata img, #shiro img{
   width: 77px;
 }
+
+#remilia-folder, #bera-folder {
+  cursor: pointer;
+}
